--- a/MA_Klassifizierung_Geschlecht.ipynb
+++ b/MA_Klassifizierung_Geschlecht.ipynb
@@ -1978,12 +1978,19 @@
         "outputId": "33ad60e0-1b55-4058-c498-7cab2b25e88c"
       },
       "source": [
+        "# testing\n",
         "# compare predicted labels to true labels\n",
         "prediction = np.argmax(network.predict(test_images), axis=-1)\n",
-        "labels = []\n",
-        "for i in indices:\n",
-        "  labels.append(prediction[i])\n",
-        "  print('predicted class:', prediction[i], 'true label:', np.argmax(test_labels[i]),'result:', prediction[i] == np.argmax(test_labels[i]))"
+        "predicted_labels = []\n",
+        "true_labels = []\n",
+        "\n",
+        "for num in indices:\n",
+        "  predicted_labels.append(prediction[num])\n",
+        "  true_labels.append(np.argmax(test_labels[num]))\n",
+        "\n",
+        "for i in range(len(labels)):\n",
+        "  print('img: {}, predicted class: {}, true label: {}, result: {}'\n",
+        "  .format(sub_df.loc[split2 + indices[i], 'id'], predicted_labels[i], true_labels[i], predicted_labels[i] == true_labels[i]))"
       ],
       "execution_count": null,
       "outputs": [
@@ -2041,14 +2048,15 @@
         "image_path = DATASET_PATH + '/images/'\n",
         "fig = plt.figure(figsize=(9, 9))\n",
         "\n",
+        "\n",
         "for i in range(9):\n",
         "  # get the image path from the data frame\n",
         "  image_id = sub_df.loc[split2 + indices[i], 'id']\n",
         "  image = plt.imread(image_path + str(image_id) + '.jpg')\n",
-        "  fig.add_subplot(3, 3, i+1)\n",
-        "  plt.imshow(image)\n",
+        "  fig.add_subplot(3,3,i+1)\n",
         "  # get the predicted label\n",
-        "  plt.title(unique_types[labels[i]])\n",
+        "  plt.title(unique_types[predicted_labels[i]] + ': ' + str(predicted_labels[i] == true_labels[i]))\n",
+        "  plt.imshow(image)\n",
         "  plt.axis('off')\n"
       ],
       "execution_count": null,
